(feat/#9): changed naming of many methods for openapi interfaces but ran into unknown problem
weird ahh coflict ahh solving ahh
