# api/src/main/java/com/example/computershop/controller/DeviceController.java
@@ -1,8 +1,10 @@
 package com.example.computershop.controller;
 
-import com.example.computershop.model.dto.DeviceDto;
 import com.example.computershop.service.DeviceService;
+import com.example.specs.generated.api.DeviceControllerApi;
+import com.example.specs.generated.model.DeviceDto;
 import lombok.RequiredArgsConstructor;
+import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RequestParam;
@@ -13,18 +15,19 @@ import java.util.List;
 @RequiredArgsConstructor
 @RestController
 @RequestMapping("/admin/devices")
-public class DeviceController {
+public class DeviceController implements DeviceControllerApi {
 
 
     private final DeviceService deviceService;
 
-    @GetMapping("/all")
-    List<DeviceDto> getDevices(){
-        return deviceService.getAllDevices();
+    @Override
+    public ResponseEntity<DeviceDto> getDevice(String model) {
+        return ResponseEntity.ok(deviceService.getDevice(model));
     }
-    @GetMapping
-    DeviceDto getDevice(@RequestParam String model){
-        return deviceService.getDevice(model);
+
+    @Override
+    public ResponseEntity<List<com.example.specs.generated.model.DeviceDto>> getDevices() {
+        return ResponseEntity.ok(deviceService.getAllDevices());
     }
 
 
