# specs/src/main/resources/openapi.yml
@@ -22,7 +22,7 @@
         "tags": [
           "product-customer-controller"
         ],
-        "operationId": "getProduct",
+        "operationId": "getCustomerProduct",
         "parameters": [
           {
             "name": "model",
@@ -80,7 +80,7 @@
         "tags": [
           "printer-customer-controller"
         ],
-        "operationId": "getPrinter",
+        "operationId": "getCustomerPrinter",
         "parameters": [
           {
             "name": "code",
@@ -109,7 +109,7 @@
         "tags": [
           "printer-customer-controller"
         ],
-        "operationId": "insertIntoCart_1",
+        "operationId": "insertCustomerIntoCart",
         "requestBody": {
           "content": {
             "application/json": {
@@ -137,9 +137,9 @@
     "/customer/pcs": {
       "get": {
         "tags": [
-          "pc-customer-controllerlol"
+          "pc-customer-controller"
         ],
-        "operationId": "getPc",
+        "operationId": "getCustomerPc",
         "parameters": [
           {
             "name": "code",
@@ -198,7 +198,7 @@
         "tags": [
           "laptop-customer-controller"
         ],
-        "operationId": "getLaptop",
+        "operationId": "getCustomerLaptop",
         "parameters": [
           {
             "name": "code",
@@ -317,7 +317,7 @@
         "tags": [
           "product-controller"
         ],
-        "operationId": "getProduct_1",
+        "operationId": "getProduct",
         "parameters": [
           {
             "name": "model",
@@ -401,7 +401,7 @@
         "tags": [
           "printer-controller"
         ],
-        "operationId": "getPrinter_1",
+        "operationId": "getPrinter",
         "parameters": [
           {
             "name": "code",
@@ -488,7 +488,7 @@
           "tag_at_class_lvl. Its pc controller"
         ],
         "summary": "Get a pc by its id",
-        "operationId": "getPc_1",
+        "operationId": "getPc",
         "parameters": [
           {
             "name": "code",
@@ -563,7 +563,7 @@
         "tags": [
           "laptop-controller"
         ],
-        "operationId": "getLaptop_1",
+        "operationId": "getLaptop",
         "parameters": [
           {
             "name": "code",
@@ -978,7 +978,7 @@
         "tags": [
           "product-customer-controller"
         ],
-        "operationId": "getJoinedProducts",
+        "operationId": "getCustomerJoinedProducts",
         "responses": {
           "200": {
             "description": "OK",
@@ -1001,7 +1001,7 @@
         "tags": [
           "product-customer-controller"
         ],
-        "operationId": "getProducts",
+        "operationId": "getCustomerProducts",
         "responses": {
           "200": {
             "description": "OK",
@@ -1024,7 +1024,7 @@
         "tags": [
           "printer-customer-controller"
         ],
-        "operationId": "getPrinters",
+        "operationId": "getCustomerPrinters",
         "responses": {
           "200": {
             "description": "OK",
@@ -1047,7 +1047,7 @@
         "tags": [
           "pc-customer-controller"
         ],
-        "operationId": "getPcs",
+        "operationId": "getCustomerPcs",
         "responses": {
           "200": {
             "description": "OK",
@@ -1070,7 +1070,7 @@
         "tags": [
           "laptop-customer-controller"
         ],
-        "operationId": "getLaptops",
+        "operationId": "getCustomerLaptops",
         "responses": {
           "200": {
             "description": "OK",
@@ -1093,7 +1093,7 @@
         "tags": [
           "device-customer-controller"
         ],
-        "operationId": "getDevice",
+        "operationId": "getCustomerDevice",
         "parameters": [
           {
             "name": "model",
@@ -1123,7 +1123,7 @@
         "tags": [
           "device-customer-controller"
         ],
-        "operationId": "getDevices",
+        "operationId": "getCustomerDevices",
         "responses": {
           "200": {
             "description": "OK",
@@ -1146,7 +1146,7 @@
         "tags": [
           "cart-consumer-controller"
         ],
-        "operationId": "getCartForCustomer",
+        "operationId": "getCustomerCartForCustomer",
         "parameters": [
           {
             "name": "username",
@@ -1200,7 +1200,7 @@
         "tags": [
           "cart-consumer-controller"
         ],
-        "operationId": "getAllCartItems",
+        "operationId": "getCustomerAllCartItems",
         "responses": {
           "200": {
             "description": "OK",
@@ -1223,7 +1223,7 @@
         "tags": [
           "product-controller"
         ],
-        "operationId": "getJoinedProducts_1",
+        "operationId": "getJoinedProducts",
         "responses": {
           "400": {
             "description": "Bad Request",
@@ -1259,7 +1259,7 @@
         "tags": [
           "product-controller"
         ],
-        "operationId": "getProducts_1",
+        "operationId": "getProducts",
         "responses": {
           "400": {
             "description": "Bad Request",
@@ -1295,7 +1295,7 @@
         "tags": [
           "printer-controller"
         ],
-        "operationId": "getPrinters_1",
+        "operationId": "getPrinters",
         "responses": {
           "400": {
             "description": "Bad Request",
@@ -1331,7 +1331,7 @@
         "tags": [
           "tag_at_class_lvl. Its pc controller"
         ],
-        "operationId": "getPcs_1",
+        "operationId": "getPcs",
         "responses": {
           "200": {
             "description": "OK",
@@ -1354,7 +1354,7 @@
         "tags": [
           "laptop-controller"
         ],
-        "operationId": "getLaptops_1",
+        "operationId": "getLaptops",
         "responses": {
           "400": {
             "description": "Bad Request",
@@ -1390,7 +1390,7 @@
         "tags": [
           "device-controller"
         ],
-        "operationId": "getDevice_1",
+        "operationId": "getDevice",
         "parameters": [
           {
             "name": "model",
@@ -1420,7 +1420,7 @@
         "tags": [
           "device-controller"
         ],
-        "operationId": "getDevices_1",
+        "operationId": "getDevices",
         "responses": {
           "200": {
             "description": "OK",
@@ -1443,7 +1443,7 @@
         "tags": [
           "cart-consumer-controller"
         ],
-        "operationId": "deleteOneFromCart",
+        "operationId": "deleteCustomerOneFromCart",
         "parameters": [
           {
             "name": "orderId",
